--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.0-beta3",
+    "chart.js": "^3.4.1",
     "embla-carousel": "^4.5.3",
     "next": "11.0.1",
     "react": "17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
     "react-markdown": "^6.0.2"
