--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-chartjs-2": "^3.0.3",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
-    "react-markdown": "^6.0.2"
+    "react-markdown": "^6.0.2",
+    "react-paginate": "^7.1.3"
   },
   "devDependencies": {
     "eslint": "7.30.0",
