--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@badrap/bar-of-progress": "^0.1.2",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
     "chart.js": "^3.4.1",
     "embla-carousel": "^4.5.3",
