--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-paginate": "^7.1.3"
   },
   "devDependencies": {
+    "@zeit/next-css": "^1.0.1",
     "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "next-purgecss": "^4.0.0"
   }
 }
